loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:14: error: not found: value poseBscuit
poseBscuit 
^